--- a/Repetições/exercicosnapratica2/style.css
+++ b/Repetições/exercicosnapratica2/style.css
@@ -15,5 +15,22 @@ section {
     padding: 10px;
     font-family: verdana;
     border-radius: 15px;
-    box-shadow:  2px 2px 2px 2px rgba(255, 255, 255, 0.253);
+   
+}
+input {
+    border-radius: 8px;
+    border: solid rgba(0, 0, 0, 0.979) 1px;
+    padding: 3px;
+    outline: 0;
+}
+#button {
+    cursor: pointer;
+}
+#button:hover {
+    background-color: rgba(0, 0, 0, 0.774) ;
+    color: white;
+}
+select {
+    border-radius: 3px;
+    border: solid 2px black;
 }
